--- a/style.css
+++ b/style.css
@@ -7,7 +7,10 @@
     border-color: red;
   }
   .input-error-message {
-    color: red;
+    color: rgb(15, 15, 15);
+    border: 1px solid black;
+    background-color: red;
+    margin-left: 10px;
   }
   .error-alert {
     color: red;
@@ -26,6 +29,8 @@
     width: 50%;
     margin: 0 auto;
     text-align: center;
+    border-radius: 15px;
+    opacity: 0.9;
   
   }
   form input {
